# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]
### Removed
- [LOG_FORWARDER] [ELASTICSEARCH] RateLimit settings
### Added
- [LOG_FORWARDER] Disk-assisted queues for reliability
### Fixed
- [SYSTEM] [CERTIFICATES] Protect used certificates when attempted to be deleted
- [ACLS] Rebuild HAProxy conf on ACL change
- [LOGFORWARDER] [ELASTICSEARCH] Enable ELS>=8 compatibility
- [LOGFORWARDER] [ELASTICSEARCH] Ensure index patterns are kept to lowercase
- [LOGFORWARDER] [ELASTICSEARCH] Avoid newline problems in generated configurations
- [CLUSTER_JOIN] New node couldn't resolve all other nodes' name and IP
- [CLUSTER_JOIN] New node missed an initial Rsyslog configuration file


## [2.8.2] - 2023-07-05
### Fixed
- [SYSTEM] [MIGRATIONS] Resolve manual migrtions problems with existing CARP interfaces


## [2.8.1] - 2023-07-05
### Added
- [NETWORK] Allow possibility to create LAGG interfaces
- [NET2MONGO] Can now import system configurations for interfaces, aliases, VLANs and LAGG interfaces
### Changed
- [NETWORK] [GUI] VLAN configuration rework: ability to create/configure VLAN virtual interfaces directly from GUI
- [NETWORK] Internal rework of network interfaces parameters
- [SYSTEM] Improved capabilities to modify system/network configurations
- [API] [NETWORK] Allow getting a list of NetworkAddress objects filtering by name, ip, type and NICs
###  Fixed
- [PF] [CONFIG] Configuration generation could fail with some network interfaces configured


## [2.8.0] - 2023-06-28
### Added
- [API_PARSER] [CYBEREASON] Add support for 'malware' URI
- [FRONTEND] [GUI] Allow to configure the maximum number of workers for LOG Listeners
- [FRONTEND] [GUI] Allow to configure/activate new mmdblookup cache size parameter for LOG Listeners