@@ -9,6 +9,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [LOG_FORWARDER] [ELASTICSEARCH] RateLimit settings
 ### Added
 - [LOG_FORWARDER] Disk-assisted queues for reliability
+### Changed
+- [VOCABULARY] Replace 'slave' word uses with 'replica'
 ### Fixed
 - [SYSTEM] [CERTIFICATES] Protect used certificates when attempted to be deleted
 - [ACLS] Rebuild HAProxy conf on ACL change
